fixed z-index

--- a/src/app/home/gallery-carousel/gallery-carousel.component.scss
+++ b/src/app/home/gallery-carousel/gallery-carousel.component.scss
@@ -7,6 +7,7 @@
     left: 0;
     height: 100vh;
     width: 100vw;
+    z-index: 1030;
     background-color: rgba(100, 100, 100, 0.5);
     background-color: blur(5px);
 
